Improve: Event Gateway Configurations
